# fakelab

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: publish_to_pypi.yml  test.yml
doc/source/: api.rst  conf.py  headless.rst  index.rst  testing.rst  usage.rst
doc/source/_autosummary/: FL.FLdict.rst  FL.cmdline.FontLab5Console.rst  FL.cmdline.main.rst  FL.cmdline.rst  FL.constants.rst  FL.fake.Base.Copyable.rst  FL.fake.Base.rst  FL.fake.Font.FakeFont.rst  FL.fake.Font.rst  FL.fake.FontImporter.FontImporter.rst  FL.fake.FontImporter.rst  FL.fake.FontInterpolator.AxisDict.rst  FL.fake.FontInterpolator.FontInterpolator.rst  FL.fake.FontInterpolator.rst  FL.fake.Kerning.FakeKerning.rst  FL.fake.Kerning.rst  FL.fake.KerningClass.KerningClass.rst  FL.fake.KerningClass.rst  FL.fake.PSInfo.get_default_ps_info.rst  FL.fake.PSInfo.rst  FL.fake.mixins.GuideMixin.rst  FL.fake.mixins.GuidePropertiesMixin.rst  FL.fake.mixins.rst  FL.fake.rst  FL.fl_cmd.rst  FL.helpers.FLList.FLList.rst  FL.helpers.FLList.adjust_list.rst  FL.helpers.FLList.rst  FL.helpers.ListParent.ListParent.rst  FL.helpers.ListParent.rst  FL.helpers.classList.ClassList.rst  FL.helpers.classList.rst  FL.helpers.interpolation.add_axis_to_list.rst  FL.helpers.interpolation.add_axis_to_master_list.rst  FL.helpers.interpolation.interpolate.rst  FL.helpers.interpolation.interpolate_float.rst  FL.helpers.interpolation.interpolate_point.rst  FL.helpers.interpolation.piecewise_linear_map.rst  FL.helpers.interpolation.remove_axis_from_factor_list.rst  FL.helpers.interpolation.remove_axis_from_list.rst  (+95 more)
doc/truetype-hinting/: fdef0.md  fdef1.md  fdef2.md  fdef3.md  fdef4.md  fdef5.md  fdef6.md  fdef7.md  fdef8.md  fdef9.md  fpgm.md  index.md  prep.md
examples/Macros/Selection/: Select composites.py
examples/Macros/System/Modules/fakeLabDemo/selection/: composites.py
examples/Macros/System/Modules/tests/fakeLabDemo/selection/: composites_test.py
lib/FL/: FLdict.py  MenuCommands.py  __init__.py  cmdline.py
lib/FL/fake/: Font.py  Kerning.py  KerningClass.py
lib/FL/helpers/: ListParent.py  classList.py  nametables.py
lib/FL/objects/: Component.py  Encoding.py  EncodingRecord.py  Feature.py  Font.py  FontLab.py  Glyph.py  Hint.py  KerningPair.py  Link.py  Matrix.py  Node.py  Options.py  Point.py  Rect.py  TTH.py  TTHCommand.py  TTHPoint.py  TTInfo.py  TTPoint.py  __init__.py
lib/FL/vfb/: reader.py  writer.py
scripts/: interpolate.py
src/FL/: FLdict.py  __init__.py  cmdline.py  constants.py  fl_cmd.py
src/FL/fake/: Base.py  Font.py  FontImporter.py  FontInterpolator.py  Kerning.py  KerningClass.py  Node.py  PSInfo.py  __init__.py  copy.py  mixins.py
src/FL/helpers/: FLList.py  ListParent.py  __init__.py  classList.py  interpolation.py  math.py  nametables.py  registry.py  tth.py
src/FL/objects/: Anchor.py  AuditRecord.py  Canvas.py  Component.py  Dialog.py  Encoding.py  EncodingRecord.py  Feature.py  Font.py  FontLab.py  Glyph.py  Guide.py  Hint.py  Image.py  KerningPair.py  Link.py  Matrix.py  NameRecord.py  Node.py  Options.py  Point.py  Rect.py  Replace.py  TTGasp.py  TTH.py  TTHCommand.py  TTHPoint.py  TTHProblem.py  TTInfo.py  TTPoint.py  TTStem.py  TTVdmx.py  TrueTypeTable.py  Uni.py  WeightVector.py  __init__.py
src/FL/objects/base/: Font.py  Node.py
src/FL/vfb/: __init__.py  reader.py  writer.py
tests/: fl_test.py  smoke_test.py
tests/data/: 2axMM.vfb  2axMM.vfb.json  ComicJensPro-Regular3.000.fea  ComicJensPro-Regular3.000.vfb  TheSansMono2axMM20-P11M5Plain.vfb  TheSansMono2axMM20-P11M5Plain.vfb.json  TwoAxis-P11M5Plain.vfb  TwoAxis-P11M5Plain.vfb.json  Untitled.reg  classes.vfb  classes.vfb.json  classes_duplicate.vfb  classes_duplicate.vfb.json  empty.vfb  mini.afm  mini.expanded.afm  mini.expanded.inf  mini.vfb  mini.vfb.json  minimal.reg  nokey.reg  replace_ok.vfb  replace_ok.vfb.json  replace_unset.vfb  replace_unset.vfb.json  win.reg  wrong_header.reg  wrong_value_type.reg
tests/fake/: classes.flc  fontinterpolator_test.py  kerning_class_test.py  kerning_test.py
tests/helpers/: FLList_test.py  classList_test.py  interpolation_test.py  math_test.py  nametables_test.py  registry_test.py
tests/objects/: font_test.py  glyph_test.py  guide_test.py  hint_test.py  kerningpair_test.py  matrix_test.py  node_test.py  options_test.py  point_test.py  rect_test.py  ttgasp_test.py  tthcommand_test.py  ttstem_test.py
