[project]
name = "fakelab"
description = "Fake FontLab Studio 5 for automated tests and external scripting"
keywords = ["vfb", "fonttools"]
version = "0.1.5"

readme = "README.md"
license = "GPL-3.0-or-later"

authors = [{name = "Jens Kutílek", email = "webmail@kutilek.de"}]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

requires-python = ">=3.12"
dependencies = [
    "vfblib >= 0.11.3, < 0.12.0",  # Could be made optional for a leaner test framework
]


[dependency-groups]
dev = [
    "flake8",
    "mypy",
    "ruff",
]
test = [
    { include-group = "dev"},
    "pytest",
    "pytest-cov",
    "tox",
    "tox-gh",
    "tox-uv",
]

[project.optional-dependencies]
generate = [
    # Generate actual fonts with ufo2ft
    "ufo2ft >= 3.7.1",
    "mutatormath >= 3.0.1",
]
repl = [
    # Better interactive prompt
    "ptpython >= 3.0.32"
]
all = [
    "fakelab[generate]",
    "fakelab[repl]",
]
doc = [
    "sphinx >= 9.1.0",
    "sphinx_rtd_theme",
]


[project.urls]
"Homepage" = "https://github.com/jenskutilek/fakelab"
"Documentation" = "https://fakelab.readthedocs.io/"
"Bug Tracker" = "https://github.com/jenskutilek/fakelab/issues"
"Changelog" = "https://github.com/jenskutilek/fakelab/blob/main/CHANGELOG.md"


[project.scripts]
fakelab = "FL.cmdline:main"


[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"


[tool.coverage.paths]
source = ["src", ".tox/py*/**/site-packages"]


[tool.ruff]
extend-exclude =  ["examples"]


[tool.ruff.lint.isort]
known-first-party = ["FL"]


[tool.uv.build-backend]
module-name = "FL"
# module-root = "src"
