[project]
name = "fakelab"
description = "Fake FontLab Studio 5 for automated tests and external scripting"
keywords = ["vfb", "fonttools"]
version = "0.1.8"

readme = "README.md"
license = "GPL-3.0-or-later"

authors = [{name = "Jens Kutílek", email = "webmail@kutilek.de"}]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

requires-python = ">=3.12"
dependencies = [
    "vfblib >= 0.11.5, < 0.12.0",  # Could be made optional for a leaner test framework
]


[dependency-groups]
dev = [
    "flake8 >= 7.3.0",
    "mypy >= 2.1.0",
    "ruff >= 0.15.17",
]
test = [
    { include-group = "dev"},
    "pytest >= 9.1.0",
    "pytest-cov >= 7.1.0",
    "tox >= 4.55.1",
    "tox-gh >= 1.7.1",
    "tox-uv >= 1.35.2",
]

[project.optional-dependencies]
generate = [
    # Generate actual fonts with ufo2ft
    "ufo2ft >= 3.8.2",
    "mutatormath >= 3.0.1",
]
repl = [
    # Better interactive prompt
    "ptpython >= 3.0.32, < 3.1.0"
]
all = [
    "fakelab[generate]",
    "fakelab[repl]",
]
doc = [
    "sphinx >= 9.1.0",
    "sphinx_rtd_theme >= 3.1.0",
]


[project.urls]
"Homepage" = "https://github.com/jenskutilek/fakelab"
"Documentation" = "https://fakelab.readthedocs.io/"
"Bug Tracker" = "https://github.com/jenskutilek/fakelab/issues"
"Changelog" = "https://github.com/jenskutilek/fakelab/blob/main/CHANGELOG.md"


[project.scripts]
fakelab = "FL.cmdline:main"


[build-system]
requires = ["uv_build>=0.11.21,<0.12"]
build-backend = "uv_build"


[tool.coverage.paths]
source = ["src", ".tox/py*/**/site-packages"]


[tool.ruff]
extend-exclude =  ["examples"]


[tool.ruff.lint.isort]
known-first-party = ["FL"]


[tool.uv.build-backend]
module-name = "FL"
# module-root = "src"
