[metadata]
name = fakelab
version = 0.2.0
description = Fake FontLab Studio 5 for automated tests and external scripting
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/jenskutilek/fakelab
author = Jens Kutilek
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Environment :: Console

[options]
zip_safe = False
package_dir=
    =lib
packages=find:
platforms = any
# include_package_data = True
install_requires =
    pytest
    pyyaml >= 6.0.1
    vfblib >= 0.6.4

python_requires = >=3.10

# setup_requires =
#     setuptools_scm

[options.extras_require]
# Support for reading/writing vfb files
vfb = vfblib >= 0.8.0
all =
    fakelab[vfb]

[options.packages.find]
where=lib

[flake8]
select = B, C, E, F, W, T4, B9
# last two ignores: * imports, unused imports
ignore = E203, E266, E501, W503, E741, F403, F401
max-line-length = 88
max-complexity = 19
exclude = .git, __pycache__, build, dist, .eggs, .tox

[tool:pytest]
norecursedirs = examples/*
